cabal-version:      2.4
name:               lilac
version:            0.1.0.0
synopsis:           Lispy string manipulation language
homepage:           https://github.com/dmarcia/lilac-dev
bug-reports:        https://github.com/dmarcia/lilac-dev/issues
license:            CC0-1.0 
author:             dmarcia
maintainer:         marcia@disroot.org
category:           Language

library
    exposed-modules:    Lilac,
                        Lilac.Utility,
                        Lilac.Source,
                        Lilac.Syntax,
                        Lilac.Parser.Error,
                        Lilac.Parser.Obj,
                        Lilac.Parser.Phase1,
                        Lilac.Parser.Phase2
    other-modules:
    build-depends:      base ^>=4.14.1.0,
                        text ^>=2.0,
                        megaparsec ^>=9.2,
                        composition ^>=1.0,
                        mtl ^>=2.2,
                        parser-combinators ^>=1.3
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax,
                        OverloadedStrings,
                        LambdaCase,
                        StandaloneDeriving

executable lilac
    main-is:            Main.hs
    other-modules:
    build-depends:      base ^>=4.14.1.0,
                        lilac
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: UnicodeSyntax

test-suite lilac-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
